RESOLVED FIXED279072
Fix JavaScriptCore API headers to work with the Clang Module Verifier.
https://bugs.webkit.org/show_bug.cgi?id=279072
Summary Fix JavaScriptCore API headers to work with the Clang Module Verifier.
Mark Lam
Reported 2024-09-03 10:26:37 PDT
Attachments
Mark Lam
Comment 1 2024-09-03 10:51:59 PDT
EWS
Comment 2 2024-09-03 20:15:12 PDT
Committed 283128@main (fc2e779ba915): <https://commits.webkit.org/283128@main> Reviewed commits have been landed. Closing PR #33075 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.