Fix JavaScriptCore API headers to work with the Clang Module Verifier. https://bugs.webkit.org/show_bug.cgi?id=279072 rdar://131335204

Reviewed by Elliott Williams, Tim Horton, and Keith Miller.

Changes requires by the Clang Module Verifier:
1. Removed [extern_c] from the module map declaration.
2. Fixed the top level umbrella JavaScriptCore.h to not contain any conditional includes.

Additional changes:
3. As a consequence of (2), changed #import's to #include's and added header guards to all the relevant files.
4. As a clean up, changed use of C++ style // comments to C style /* */ comments.
5. To prevent future regressions, added running the Clang Module Verifier to JavaScriptCore.xcconfig.

* Source/JavaScriptCore/API/JSContext.h:
* Source/JavaScriptCore/API/JSExport.h:
* Source/JavaScriptCore/API/JSManagedValue.h:
* Source/JavaScriptCore/API/JSValue.h:
* Source/JavaScriptCore/API/JSVirtualMachine.h:
* Source/JavaScriptCore/API/JavaScriptCore.h:
* Source/JavaScriptCore/Configurations/JavaScriptCore.xcconfig:
* Source/JavaScriptCore/JavaScriptCore.modulemap:

Canonical link: https://commits.webkit.org/283128@main